--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
